--- a/assets/pages/galería.html
+++ b/assets/pages/galería.html
@@ -89,7 +89,7 @@
             <p>Todos los derechos reservados.</p>
         </div>
         <div class="pf-footer__social">
-            <div>
+            <div class="pf-footer__socialm">
                 <a href="#" class="bi bi-instagram"></a>
                 <a href="#" class="bi bi-facebook"></a>
                 <a href="#" class="bi bi-twitter"></a>
