--- a/assets/pages/integrantes.html
+++ b/assets/pages/integrantes.html
@@ -21,11 +21,11 @@
         <h2 class="pf-header__logo">Pink <span class="pf-header__logo--pink">Floyd</span></h2>
         <nav class="pf-nav">
             <ul class="pf-nav__desk">
-                <li><a href="../../index.html">Inicio</a></li>
-                <li><a href="#">Integrantes</a></li>
-                <li><a href="./discografia.html">Discografía</a></li>
-                <li><a href="./biografia.html">Biografía</a></li>
-                <li><a href="./galería.html">Galería</a></li>
+                <li><a href="../../index.html" class="pf-nav__item">Inicio</a></li>
+                <li><a href="#" class="pf-nav__item pf-nav__item--active">Integrantes</a></li>
+                <li><a href="./discografia.html" class="pf-nav__item">Discografía</a></li>
+                <li><a href="./biografia.html" class="pf-nav__item">Biografía</a></li>
+                <li><a href="./galería.html" class="pf-nav__item">Galería</a></li>
             </ul>
             <div class="pf-nav__mobile">
                 <button class="btn nav-button" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="bi bi-list"></i></button>
