enlaces a redes sociales

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h2 class="index-main__subtitle">
           Todo sobre el mejor grupo de rock de la historia.
         </h2>
-        <a href="#" class="btn index-main__a">Ir a Biografía</a>
+        <a href="./assets/pages/biografia.html" class="btn index-main__a">Ir a Biografía</a>
       </div>
     </main>
     <footer class="pf-footer">
@@ -147,9 +147,9 @@
       </div>
       <div class="pf-footer__social">
         <div class="pf-footer__socialm">
-          <a href="#" class="bi bi-instagram"></a>
-          <a href="#" class="bi bi-facebook"></a>
-          <a href="#" class="bi bi-twitter"></a>
+          <a href="https://www.instagram.com" class="bi bi-instagram" target="_blank"></a>
+          <a href="https://www.facebook.com" class="bi bi-facebook" target="_blank"></a>
+          <a href="https://www.instagram.com" class="bi bi-twitter" target="_blank"></a>
         </div>
         <div>
           <span class="pf-footer__text">¡Contáctame!</span>
