--- a/assets/pages/galería.html
+++ b/assets/pages/galería.html
@@ -162,9 +162,9 @@
       </div>
       <div class="pf-footer__social">
         <div class="pf-footer__socialm">
-          <a href="#" class="bi bi-instagram"></a>
-          <a href="#" class="bi bi-facebook"></a>
-          <a href="#" class="bi bi-twitter"></a>
+          <a href="https://www.instagram.com" class="bi bi-instagram" target="_blank"></a>
+          <a href="https://www.facebook.com" class="bi bi-facebook" target="_blank"></a>
+          <a href="https://www.instagram.com" class="bi bi-twitter" target="_blank"></a>
         </div>
         <div>
           <span class="pf-footer__text">¡Contáctame!</span>
