arrenglé enlace de red social

--- a/assets/pages/integrantes.html
+++ b/assets/pages/integrantes.html
@@ -234,7 +234,7 @@
         <div class="pf-footer__socialm">
           <a href="https://www.instagram.com" class="bi bi-instagram" target="_blank"></a>
           <a href="https://www.facebook.com" class="bi bi-facebook" target="_blank"></a>
-          <a href="https://www.instagram.com" class="bi bi-twitter" target="_blank"></a>
+          <a href="https://twitter.com/home" class="bi bi-twitter" target="_blank"></a>
         </div>
         <div>
           <span class="pf-footer__text">¡Contáctame!</span>
