--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
   </head>
   <body>
     <header class="pf-header">
-      <h2 class="pf-header__logo">
-        Pink <span class="pf-header__logo--pink">Floyd</span>
-      </h2>
+      <a href="index.html">
+        <h2 class="pf-header__logo">
+          Pink <span class="pf-header__logo--pink">Floyd</span>
+        </h2>
+      </a>
       <nav class="pf-nav">
         <ul class="pf-nav__desk">
           <li>
